assets/contiamo_prod/alertmanager-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
  labels:
     alertmanager: main
  name: alertmanager
  namespace: monitoring
spec:
  rules:
  - host: alertmanager.prod.contiamo.io
    http:
      paths:
      - backend:
          serviceName: alertmanager-main
          servicePort: web
        path: /
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: alertmanager.prod.contiamo.io-oauth2-proxy
  namespace: monitoring
spec:
  rules:
  - host: alertmanager.prod.contiamo.io
    http:
      paths:
      - backend:
          serviceName: oauth2-proxy
          servicePort: 4180
        path: /oauth2
  tls:
  - hosts:
    - alertmanager.prod.contiamo.io
    secretName: prod.contiamo.io-tls-letsencrypt-prod
