assets/contiamo_prod/tracing-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
  labels:
    app: tracing-jaeger
    app.kubernetes.io/instance: tracing
  name: tracing-jaeger
  namespace: monitoring
spec:
  rules:
  - host: tracing.prod.contiamo.io
    http:
      paths:
      - backend:
          serviceName: tracing-jaeger-query
          servicePort: 80
        path: /

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tracing.prod.contiamo.io-oauth2-proxy
  namespace: monitoring
spec:
  rules:
  - host: tracing.prod.contiamo.io
    http:
      paths:
      - backend:
          serviceName: oauth2-proxy
          servicePort: 4180
        path: /oauth2
  tls:
  - hosts:
    - tracing.prod.contiamo.io
    secretName: prod.contiamo.io-tls-letsencrypt-prod
